--- a/address_one_line.info.yml
+++ b/address_one_line.info.yml
@@ -1,5 +1,5 @@
 name: 'Address One Line Formatter'
 type: module
 description: 'Provides a one-line formatter for address fields.'
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8 || ^9 || ^10
 package: 'Field types'
